deploy/ingress-traefik.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
  labels:
    app: kubeyaml
  name: kubeyaml
  namespace: default
spec:
  rules:
  - host: kubeyaml.example.com
    http:
      paths:
      - backend:
          serviceName: kubeyaml
          servicePort: 80 
        path: /
